Fixed issue that "global" scrollbars appear when the sidebar is opened

--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -32,6 +32,7 @@
   float: left;
   height: 100%;
   width: 500px;
+  overflow:hidden;
 }
 
 /* a slim bar between sidebar and main content. It will allow the user to
